--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -61,7 +61,7 @@
 
           <div class="form-group">
             <label>Контакт (телефон/WhatsApp) *</label>
-            <input type="text" name="contact" required placeholder="+7 (999) 123-45-67">
+            <input type="text" name="contact" required placeholder="+966 552345346">
           </div>
 
           <div class="form-group">
