--- a/public/admin.html
+++ b/public/admin.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>TokMaker — Админ</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
   <header class="site-header">
     <h1>Админ-панель</h1>
@@ -22,11 +24,22 @@
     <div id="adminArea" style="display:none;">
       <h2>Заявки</h2>
       <table id="appsTable">
-        <thead><tr><th>ID</th><th>Имя</th><th>Контакт</th><th>Категория</th><th>Цена</th><th>Дата создания</th></tr></thead>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Имя</th>
+            <th>Контакт</th>
+            <th>Адрес</th>
+            <th>Категория</th>
+            <th>Цена</th>
+            <th>Дата создания</th>
+          </tr>
+        </thead>
         <tbody></tbody>
       </table>
     </div>
   </main>
   <script src="/app.js"></script>
 </body>
+
 </html>
