--- a/public/auth.html
+++ b/public/auth.html
@@ -1,34 +1,145 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>TokMaker — Вход</title>
   <link rel="stylesheet" href="/styles.css">
   <style>
-    .auth-container { max-width: 400px; margin: 60px auto; padding: 20px; }
-    .auth-card { background: var(--card); padding: 40px; border-radius: var(--radius); box-shadow: 0 8px 24px var(--shadow); }
-    .auth-header { text-align: center; margin-bottom: 30px; }
-    .auth-header h1 { color: var(--primary); font-size: 28px; margin-bottom: 8px; }
-    .auth-header p { color: var(--muted); font-size: 14px; }
-    .auth-tabs { display: flex; gap: 0; margin-bottom: 24px; border-bottom: 2px solid #E5E7EB; }
-    .auth-tab { flex: 1; padding: 12px; text-align: center; cursor: pointer; font-weight: 500; color: var(--muted); border-bottom: 3px solid transparent; transition: all 0.3s; }
-    .auth-tab.active { color: var(--primary); border-bottom-color: var(--primary); }
-    .auth-form { display: none; }
-    .auth-form.show { display: block; }
-    .message { padding: 12px; margin-bottom: 16px; border-radius: var(--radius); font-size: 13px; display: none; }
-    .message.show { display: block; animation: fadeInDown 0.3s ease; }
-    .message.success { background: #d1fae5; color: #065f46; }
-    .message.error { background: #fee2e2; color: #991b1b; }
-    .form-group { margin-bottom: 16px; }
-    .form-group label { display: block; margin-bottom: 6px; font-weight: 500; color: var(--text); font-size: 13px; }
-    .form-group input { width: 100%; padding: 12px; border: 1px solid #CBD5E1; border-radius: var(--radius); font-size: 14px; }
-    .form-group input:focus { outline: none; border-color: var(--primary); box-shadow: 0 0 0 3px rgba(30, 58, 138, 0.1); }
-    .auth-button { width: 100%; padding: 14px; background: var(--primary); color: white; border: none; border-radius: var(--radius); font-weight: 600; cursor: pointer; font-size: 14px; transition: all 0.3s; }
-    .auth-button:hover { background: #1a2a5e; transform: translateY(-2px); }
-    .auth-button:active { transform: translateY(0); }
+    .auth-container {
+      max-width: 400px;
+      margin: 60px auto;
+      padding: 20px;
+    }
+
+    .auth-card {
+      background: var(--card);
+      padding: 40px;
+      border-radius: var(--radius);
+      box-shadow: 0 8px 24px var(--shadow);
+    }
+
+    .auth-header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .auth-header h1 {
+      color: var(--primary);
+      font-size: 28px;
+      margin-bottom: 8px;
+    }
+
+    .auth-header p {
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    .auth-tabs {
+      display: flex;
+      gap: 0;
+      margin-bottom: 24px;
+      border-bottom: 2px solid #E5E7EB;
+    }
+
+    .auth-tab {
+      flex: 1;
+      padding: 12px;
+      text-align: center;
+      cursor: pointer;
+      font-weight: 500;
+      color: var(--muted);
+      border-bottom: 3px solid transparent;
+      transition: all 0.3s;
+    }
+
+    .auth-tab.active {
+      color: var(--primary);
+      border-bottom-color: var(--primary);
+    }
+
+    .auth-form {
+      display: none;
+    }
+
+    .auth-form.show {
+      display: block;
+    }
+
+    .message {
+      padding: 12px;
+      margin-bottom: 16px;
+      border-radius: var(--radius);
+      font-size: 13px;
+      display: none;
+    }
+
+    .message.show {
+      display: block;
+      animation: fadeInDown 0.3s ease;
+    }
+
+    .message.success {
+      background: #d1fae5;
+      color: #065f46;
+    }
+
+    .message.error {
+      background: #fee2e2;
+      color: #991b1b;
+    }
+
+    .form-group {
+      margin-bottom: 16px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: 500;
+      color: var(--text);
+      font-size: 13px;
+    }
+
+    .form-group input {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #CBD5E1;
+      border-radius: var(--radius);
+      font-size: 14px;
+    }
+
+    .form-group input:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 3px rgba(30, 58, 138, 0.1);
+    }
+
+    .auth-button {
+      width: 100%;
+      padding: 14px;
+      background: var(--primary);
+      color: white;
+      border: none;
+      border-radius: var(--radius);
+      font-weight: 600;
+      cursor: pointer;
+      font-size: 14px;
+      transition: all 0.3s;
+    }
+
+    .auth-button:hover {
+      background: #1a2a5e;
+      transform: translateY(-2px);
+    }
+
+    .auth-button:active {
+      transform: translateY(0);
+    }
   </style>
 </head>
+
 <body style="background: var(--bg);">
   <div class="auth-container">
     <div class="auth-card">
@@ -73,12 +184,12 @@
 
         <div class="form-group">
           <label>Пароль *</label>
-          <input type="password" name="password" required placeholder="••••••••" minlength="6">
+          <input type="password" name="password" required placeholder="••••••••" minlength="3">
         </div>
 
         <div class="form-group">
           <label>Подтвердите пароль *</label>
-          <input type="password" name="confirmPassword" required placeholder="••••••••" minlength="6">
+          <input type="password" name="confirmPassword" required placeholder="••••••••" minlength="3">
         </div>
 
         <button type="submit" class="auth-button">Зарегистрироваться</button>
@@ -91,7 +202,7 @@
     function switchTab(tab) {
       document.querySelectorAll('.auth-tab').forEach(t => t.classList.remove('active'));
       document.querySelectorAll('.auth-form').forEach(f => f.classList.remove('show'));
-      
+
       event.target.classList.add('active');
       document.getElementById(tab + 'Form').classList.add('show');
     }
@@ -182,4 +293,5 @@
     });
   </script>
 </body>
+
 </html>
