--- a/public/auth.html
+++ b/public/auth.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>TokMaker — Вход</title>
+  <title>JARDAM4Y — Вход</title>
   <link rel="stylesheet" href="/styles.css">
   <style>
     .auth-container {
@@ -26,7 +26,7 @@
     }
 
     .auth-header h1 {
-      color: var(--primary);
+      color: #f3bf15;
       font-size: 28px;
       margin-bottom: 8px;
     }
@@ -144,7 +144,7 @@
   <div class="auth-container">
     <div class="auth-card">
       <div class="auth-header">
-        <h1>TokMaker</h1>
+        <h1>JARDAM4Y</h1>
         <p>Платформа для работодателей и исполнителей</p>
       </div>
 
