--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>TokMaker — помощь рядом</title>
+  <title>JARDAM4Y — помощь рядом</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +13,14 @@
   <header class="site-header">
     <div class="header-container">
       <div class="header-brand">
-        <h1>TokMaker</h1>
+
+        <nav>
+          <div class="logo-holder">
+            <img src="photo/1logo.png" alt="logo" class="logo-img">
+          </div>
+        </nav>
+
+        <h1>JARDAM4Y</h1>
         <p class="header-tagline">Социальная платформа Enactus МУЦА</p>
       </div>
       <div class="header-actions">
@@ -49,14 +56,21 @@
   <footer class="site-footer">
     <div class="footer-container">
       <div class="footer-column">
-        <h3>TokMaker</h3>
-        <p>Это социальная платформа, созданная командой Enactus МУЦА. Наша цель — помочь жителям города Токмок справляться с бытовыми и семейными задачами.</p>
+        <h3>JARDAM4Y</h3>
+        <p>Это социальная платформа, созданная командой Enactus МУЦА. Наша цель — помочь жителям города Токмок
+          справляться с бытовыми и семейными задачами.</p>
       </div>
       <div class="footer-column">
         <h3>Контакты</h3>
         <ul class="footer-links">
           <li><i class="fa-solid fa-location-dot"></i> г. Токмок, ул. Сарыбагышева 1</li>
-          <li><i class="fa-solid fa-envelope"></i> enactus@iuca.kg</li>
+          <li>
+            <i class="fa-solid fa-envelope"></i>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=enactus@iuca.kg&su=Тема%20письма&body=Здравствуйте,%20хочу%20узнать%20..."
+              target="_blank" rel="noopener">
+              enactus@iuca.kg
+            </a>
+          </li>
           <li><i class="fa-solid fa-phone"></i> +996 (XXX) XX-XX-XX</li>
         </ul>
       </div>
@@ -66,14 +80,15 @@
           <a href="https://wa.me/996700399535" target="_blank" class="social-btn whatsapp">
             <i class="fa-brands fa-whatsapp"></i> Написать в WhatsApp
           </a>
-          <a href="https://instagram.com/enactus_iuca" target="_blank" class="social-btn instagram">
+          <a href="https://www.instagram.com/enactus.iuca.kg?igsh=dG94bGhmMW5mOWYw" target="_blank"
+            class="social-btn instagram">
             <i class="fa-brands fa-instagram"></i> Instagram
           </a>
         </div>
       </div>
     </div>
     <div class="footer-bottom">
-      © 2024 TokMaker — MVP. Все права защищены.
+      © 2024 JARDAM4Y — MVP. Все права защищены.
     </div>
   </footer>
 
