--- a/public/employer.html
+++ b/public/employer.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>TokMaker — Создать заявку</title>
+  <title>JARDAM4Y — Создать заявку</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 
