полностью все работает

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,7 +14,7 @@
   <header class="site-header">
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <div>
-        <h1>JARDAM4Y</h1>
+        <img src="/photo/enactus-logo.png" alt="JARDAM4Y logo" class="site-logo">
         <h4>Личный кабинет</h4>
       </div>
       <button onclick="location.href='/'" class="icon-btn" title="На главную" style="margin-left: auto;">
