--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,7 @@
   <header class="site-header">
     <div class="header-container">
       <div class="header-brand">
-
-        <nav>
-          <div class="logo-holder">
-            <img src="photo/1logo.png" alt="logo" class="logo-img">
-          </div>
-        </nav>
-
-        <h1>JARDAM4Y</h1>
+        <img src="/photo/enactus-logo.png" alt="JARDAM4Y logo" class="site-logo">
         <p class="header-tagline">Социальная платформа Enactus МУЦА</p>
       </div>
       <div class="header-actions">
@@ -71,7 +64,7 @@
               enactus@iuca.kg
             </a>
           </li>
-          <li><i class="fa-solid fa-phone"></i> +996 (XXX) XX-XX-XX</li>
+          <li><i class="fa-solid fa-phone"></i> +996 (700) 39-95-35</li>
         </ul>
       </div>
       <div class="footer-column">
