--- a/public/auth.html
+++ b/public/auth.html
@@ -25,10 +25,11 @@
       margin-bottom: 30px;
     }
 
-    .auth-header h1 {
-      color: #f3bf15;
-      font-size: 28px;
-      margin-bottom: 8px;
+    .auth-logo {
+      display: block;
+      margin: 0 auto 12px;
+      max-width: 180px;
+      height: auto;
     }
 
     .auth-header p {
@@ -144,7 +145,7 @@
   <div class="auth-container">
     <div class="auth-card">
       <div class="auth-header">
-        <h1>JARDAM4Y</h1>
+        <img src="/photo/enactus-logo.png" alt="JARDAM4Y logo" class="auth-logo">
         <p>Платформа для работодателей и исполнителей</p>
       </div>
 
